[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/HelveticaTime.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/GameLogic.gd" type="Script" id=3]
[ext_resource path="res://scripts/Timer.gd" type="Script" id=4]
[ext_resource path="res://default_theme.tres" type="Theme" id=5]

[sub_resource type="GDScript" id=1]
script/source = "extends ColorRect

onready var gameLogic = $mainHBox/gameArea

func _ready():
	pass # Replace with function body.
	
	
func reveal_all_mines(won: bool = true):
	var mines = gameLogic._mines
	
	for mine in mines:
		mine.play_end_match_animation(won)
"

[node name="background" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
color = Color( 0.0784314, 0.0196078, 0.00784314, 1 )
script = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mainHBox" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gameArea" type="MarginContainer" parent="mainHBox"]
margin_right = 600.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.43
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rowList" type="VBoxContainer" parent="mainHBox/gameArea"]
margin_left = 5.0
margin_top = 5.0
margin_right = 595.0
margin_bottom = 595.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = -5

[node name="menuArea" type="MarginContainer" parent="mainHBox"]
margin_left = 604.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 0
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="mainHBox/menuArea"]
margin_top = 5.0
margin_right = 415.0
margin_bottom = 595.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0784314, 0.0196078, 0.00784314, 1 )

[node name="margin" type="MarginContainer" parent="mainHBox/menuArea/background"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="VBoxContainer" parent="mainHBox/menuArea/background/margin"]
margin_left = 15.0
margin_top = 15.0
margin_right = 400.0
margin_bottom = 575.0

[node name="timeMargin" type="CenterContainer" parent="mainHBox/menuArea/background/margin/buttons"]
margin_right = 385.0
margin_bottom = 154.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="timeLabel" type="Label" parent="mainHBox/menuArea/background/margin/buttons/timeMargin"]
margin_left = 91.0
margin_top = 36.0
margin_right = 293.0
margin_bottom = 117.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 1 )
text = "00:00"
script = ExtResource( 4 )

[node name="timer" type="Timer" parent="mainHBox/menuArea/background/margin/buttons/timeMargin/timeLabel"]

[node name="gridSizeButton" type="OptionButton" parent="mainHBox/menuArea/background/margin/buttons"]
margin_top = 158.0
margin_right = 385.0
margin_bottom = 235.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "9x9"
align = 1
items = [ "9x9", null, false, 0, null, "16x16", null, false, 1, null, "22x22", null, false, 2, null ]
selected = 0

[node name="newGameButton" type="Button" parent="mainHBox/menuArea/background/margin/buttons"]
margin_top = 239.0
margin_right = 385.0
margin_bottom = 316.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "New Game"

[node name="resetGameButton" type="Button" parent="mainHBox/menuArea/background/margin/buttons"]
margin_top = 320.0
margin_right = 385.0
margin_bottom = 397.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Restart"

[node name="revealAllButton" type="Button" parent="mainHBox/menuArea/background/margin/buttons"]
margin_top = 401.0
margin_right = 385.0
margin_bottom = 478.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Show Solution"

[node name="quitButton" type="Button" parent="mainHBox/menuArea/background/margin/buttons"]
margin_top = 482.0
margin_right = 385.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Quit"

[connection signal="timeout" from="mainHBox/menuArea/background/margin/buttons/timeMargin/timeLabel/timer" to="mainHBox/menuArea/background/margin/buttons/timeMargin/timeLabel" method="_increment_one_second"]
[connection signal="item_selected" from="mainHBox/menuArea/background/margin/buttons/gridSizeButton" to="mainHBox/gameArea" method="changeGridSize"]
[connection signal="pressed" from="mainHBox/menuArea/background/margin/buttons/newGameButton" to="mainHBox/gameArea" method="newGame"]
[connection signal="pressed" from="mainHBox/menuArea/background/margin/buttons/resetGameButton" to="mainHBox/gameArea" method="resetGame"]
[connection signal="pressed" from="mainHBox/menuArea/background/margin/buttons/revealAllButton" to="." method="reveal_all_mines" binds= [ false ]]
[connection signal="pressed" from="mainHBox/menuArea/background/margin/buttons/quitButton" to="mainHBox/gameArea" method="quitGame"]
